--- a/Mysite/Contact.html
+++ b/Mysite/Contact.html
@@ -9,14 +9,16 @@
 </head>
 <body>
     <h1 id="header">welcome to moringa </h1>
-<h1>Hello everyone</h1>
+    <h1>contact infomation</h1>
 <p>My Name Is Collins Kimani</p>
-<P>Thank for choosing this site if you need more infomation just contact us.</P>
+<P>You can reach me through</P>
+<h1><color js>
+    0794199883 
+</h1>
 <nav>
     <a href="Home.html">home</a>
     <a href="About.html">About Us</a>
-    <a href="/js/">Contact Us</a>
-    <image></image>
+    <a href="Contact.html">Contact Us</a>
 ---</nav>
 </body>
 </html>
