--- a/Mysite/Home.html
+++ b/Mysite/Home.html
@@ -11,12 +11,14 @@
     <h1 id="header">welcome to moringa </h1>
 <h1>Hello everyone</h1>
 <p>My Name Is Collins Kimani</p>
+<img scr="https://cdn.pixabay.com/photo/2015/12/09/01/02/mandalas-1084082__480"alt="image descrption""height=31cm""widht=52cm">
+
 <P>Thank for choosing this site if you need more infomation just contact us.</P>
 <nav>
     <a href="Home.html">home</a>
     <a href="About.html">About Us</a>
-    <a href="/js/">Contact Us</a>
-    <image></image>
+    <a href="Contact.html">Contact Us</a>
+   
 ---</nav>
 </body>
 </html>
